Image Slider Working

--- a/src/app/components/navbar-component/navbar-component.component.html
+++ b/src/app/components/navbar-component/navbar-component.component.html
@@ -2,7 +2,7 @@
     <a href="#" class="logo">
         <img src="../../../assets/logo.png">
         <h1>Digiहल</h1>
-        <sub class="mat-subheading-2">Milestone on your digital path</sub>
+        <!-- <sub class="mat-subheading-2">Milestone on your digital path</sub> -->
     </a>
     <input type="checkbox" id="check">
         <label for="check">
