--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
-<!-- <app-navbar-component></app-navbar-component> -->
+<app-navbar-component></app-navbar-component>
 <!-- <app-form-component></app-form-component> -->
-<app-home-page-component></app-home-page-component>
-<!-- <app-image-slider-component></app-image-slider-component> -->
+<!-- <app-home-page-component></app-home-page-component>
+ --><!-- <app-image-slider-component></app-image-slider-component> -->
 <!-- <app-final-page-component></app-final-page-component> -->
-<!-- <app-footer-component></app-footer-component> -->
 <router-outlet></router-outlet>
+<app-footer-component></app-footer-component>
+
