--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -1,11 +1,13 @@
-                <h1>
-                    Oops!</h1>
-                <h2>
-                    404 Not Found</h2>
-                <div class="error-details">
-                    Sorry, an error has occured, Requested page not found!
-                </div>
-                <div class="error-actions">
-                    <a routerLink="../home" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-home"></span>
-                        Take Me Home </a>
-                </div>
+<div class="err_page">
+    <div class="err_page_left">
+        <img src="https://cdni.iconscout.com/illustration/premium/thumb/404-error-3936845-3277285.png" 
+        width=500px height=350px/>
+    </div>
+    <div class="err_page_right">
+        <h2>404</h2>
+        <h4>OOPS. Looks like the page you're looking for no longer exists</h4>
+        <p>Don't worry. Since you're valuable to us we will bring you back to safety</p>
+        <button routerLink = "../home" class="err_btn">Back to home</button>
+    </div>	
+
+</div>
