sent data to output page

--- a/src/app/components/final-page-component/final-page-component.component.html
+++ b/src/app/components/final-page-component/final-page-component.component.html
@@ -1,4 +1,4 @@
-<!--   <navbar-component></navbar-component> -->
+<h1>{{product | json}}</h1>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <section class="section">
       <div class="container">
