--- a/src/app/components/final-page-component/final-page-component.component.html
+++ b/src/app/components/final-page-component/final-page-component.component.html
@@ -1,107 +1,68 @@
-<h1>{{product | json}}</h1>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-    <section class="section">
-      <div class="container">
-        <div class="columns is-vcentered is-multiline">
-          <div class="column is-6-tablet is-3-desktop">
-            <h2 class="is-size-4-mobile is-size-2-desktop subtitle">
-              {{product.mobiles}}
-            </h2>
+<!-- <h1>{{product | json}}</h1>-->
+<div class="container-fluid justify-content-around">
+  <div class="row">
+      <div class="col-md-5 col-md-push-6">
+          <div class="one">
+            <div class="container-fluid phone-image">
+              <img src="{{product.img_links}}" class=" phone-class img-fluid">
+              
+            </div>
+            <div class="button-box col-lg-12">
+              <a href="{{product.best_buy_links}}" class="btn btn-primary" role="button">Buy Now</a>
+              <a href="#" class="btn btn-warning" role="button">Compare</a>
+            </div>
+          </div>
+       
+    </div>
+    <div class="col-md-7 col-md-pull-6">
+      <div class="two">
+        <div class="product-content">
+          <h2 class="product-title">{{product.mobiles}}</h2>
+          <br>
+          <div class = "product-price">
+            <p class = "new-price">Price: <span>Rs. {{product.b_Price}}</span></p>
+          </div>
+          <div class = "product-detail">
+            <h2>about this item: </h2>
+            <p>{{product.Summary}}</p>
             <ul *ngFor="let in of counter(8) ;let i = index">
-              <li class="key_specs" *ngIf="key_specs_values[i]!=undefined">{{key_specs_keys[i]}} : {{key_specs_values[i]}}</li>
+              <li *ngIf="key_specs_values[i]!=undefined">{{key_specs_keys[i]}} : <span>{{key_specs_values[i]}}</span></li>
+   
             </ul>
           </div>
-          <div class="column is-6-tablet is-5-desktop has-text-centered is-hcentered phone_img"
-          style = "background: url({{product.img_links}});
-          height:500px;
-          width:400px;
-          background-repeat:no-repeat;
-          background-position:center;
-          background-size:contain;
-          margin:auto;">
+          <div class = "product-detail pro">
+            <h2>Pros: </h2>
+            <ul *ngFor="let pro of pros">
+              <li><span>{{pro}}</span></li>
+   
+            </ul>
           </div>
-          <div class="column is-12-tablet is-4-desktop">
-            <div class="is-size-4 mb-4">Rs.{{product.b_Price}}</div>
-            <button class="button is-primary">
-            <a href="{{product.best_buy_links}}"> Buy here</a> 
-            </button>
-            <div>
+          <div class = "product-detail con">
+            <h2>Cons: </h2>
+            <ul *ngFor="let con of cons">
+              <li><span>{{con}}</span></li>
+   
+            </ul>
+          </div>
+          <div class = "product-detail">
+            <h2>Specifications: </h2>
+            <table class="basic-table table table-hover container">
+              <tbody>
+                <tr *ngFor='let in of counter(78) ;let i = index'>
+                  <td *ngIf="specs[i]!=undefined">{{category[i]}}</td>
+                  <td *ngIf="specs[i]!=undefined">{{specs[i]}}</td>
+                </tr>
+              </tbody>
+            </table>          
+  
+            
+          </div>
+        </div>
+        
+  
+        
+      </div>
+  </div>
+</div>
 
-              <!-- <div *ngFor="let in of counter(6) ;let i = index">
-                <circle-progress [percent]="(ratings[i])*10" [maxPercent]="100" [radius]="42" [outerStrokeWidth]="5" [innerStrokeWidth]="2"
-                  [outerStrokeColor]="'green'" [innerStrokeWidth]="0" [animation]="true" [animationDuration]="300"
-                  [titleFontWeight]="'600'" [subtitleFontSize]="'13'" [subtitleFontWeight]="'500'" [showUnits]="false"
-                  [subtitle]="ratings_headings[i]" [title]="ratings[i].toString()" [subtitleColor]="'black'"
-                ></circle-progress>
-              </div> -->
-            </div>
-            </div>
-        </div>
-      </div>
-      <br><br>
-    </section>
-    <section class="section">
-      <div class="container">
-        <div class="columns is-8 is-variable">
-          <div class="column is-7-tablet">
-            <div class="tabs is-boxed">
-              <ul>
-                <li class="is-active" data-target="product-details">
-                  <a>Product Details</a>
-                </li>
-              </ul>
-            </div>
-            <div class="px-2" id="tab-content">
-              <div id="product-details">
-                <h3 class="is-size-5 title">Product Details</h3>
-                  <table class="basic-table table table-hover container">
-                    <tbody>
-                      <tr *ngFor='let in of counter(78) ;let i = index'>
-                        <td *ngIf="specs[i]!=undefined">{{category[i]}}</td>
-                        <td *ngIf="specs[i]!=undefined">{{specs[i]}}</td>
-                      </tr>
-                    </tbody>
-                  </table>
-                
-              </div>
-            </div>
-          </div>
-          <div class="column is-5-tablet">
-            <div class="message">
-              <div class="message-header">
-                <p>Summary of {{product.mobiles}}</p>
-              </div>
-              <div class="message-body">
-                <p>
-                  {{product.Summary}}
-                </p>
-              </div>
-            </div>
-            <br><br>
-            <div class="message">
-              <div class="message-header">
-                <p>PROS</p>
-              </div>
-              <div class="message-body">
-                <ul style="list-style-type: disc;" *ngFor="let pro of pros">
-                  <li>{{pro}}</li>
-                </ul>
-              </div>
-            </div>
-            <br><br>
-            <div class="message">
-              <div class="message-header">
-                <p>CONS</p>
-              </div>
-              <div class="message-body">
-                <ul style="list-style-type: disc;" *ngFor="let con of cons">
-                  <li>{{con}}</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- <footer-component></footer-component> -->
 
