compare page added without styling

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,6 @@
  --><!-- <app-image-slider-component></app-image-slider-component> -->
 <!-- <app-final-page-component></app-final-page-component> -->
 <router-outlet></router-outlet>
+<!-- <app-comparison-component></app-comparison-component> -->
 <app-footer-component></app-footer-component>
 
