added styles to comparison page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,8 @@
 <!-- <app-home-page-component></app-home-page-component>
  --><!-- <app-image-slider-component></app-image-slider-component> -->
 <!-- <app-final-page-component></app-final-page-component> -->
-<router-outlet></router-outlet>
+ <router-outlet></router-outlet>
 <!-- <app-comparison-component></app-comparison-component> -->
+<!-- <app-loading-component></app-loading-component> -->
 <app-footer-component></app-footer-component>
 
