--- a/src/app/components/final-page-component/final-page-component.component.html
+++ b/src/app/components/final-page-component/final-page-component.component.html
@@ -9,7 +9,7 @@
             </div>
             <div class="button-box col-lg-12">
               <a href="{{product.best_buy_links}}" class="btn btn-primary" role="button">Buy Now</a>
-              <a href="#" class="btn btn-warning" role="button">Compare</a>
+              <a routerLink="../compare" class="btn btn-warning" role="button">Compare</a>
             </div>
           </div>
        
