--- a/src/app/components/suggestions-component/suggestions-component.component.html
+++ b/src/app/components/suggestions-component/suggestions-component.component.html
@@ -43,8 +43,9 @@
             </div>
         </div>
     </div>
-
-    <h1 class="recommendation-heading">Alternative Recommended product</h1>
+</div>
+    <div class="container">
+    <h1 class="recommendation-heading">Alternative Recommended Product</h1>
     <hr>
     <div class="card">
         <div class="row">
@@ -76,12 +77,11 @@
                             <a href="{{product2.best_buy_links}}" class="btn btn-primary" role="button">Buy Now</a>
                             <a routerLink="../compare" class="btn btn-warning" role="button">Compare</a>
                             <a routerLink="../finalOutput" 
-                            class="btn btn-success" 
+                            class="btn btn-success"  
                             role="button"
                             (click)="changeChoice(1)"
-                        >Know More</a>
+                            >Know More</a>
                         </div>
-                    </div>
                     
                 </div>
 
@@ -90,3 +90,7 @@
         </div>
     </div>
 </div>
+
+
+    
+
