--- a/src/app/components/navbar-component/navbar-component.component.html
+++ b/src/app/components/navbar-component/navbar-component.component.html
@@ -14,6 +14,7 @@
           <a href="#">Home</a>
           <a href="#AboutUsSection">About us</a>
           <a href="#ContactUsSection">Contact us</a>
+          <a routerLink="admin-login">Admin</a>
         </div>
       </div>
 </header>
